Client can now send messages and be notified if a user disconnects

--- a/static/index.html
+++ b/static/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>This is a simple chat app</h1>
     <div id="app">Hello from HTML</div>
+    <script src="bundle.js"></script>
   </body>
 </html>
